CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(ROOT-HELPER-UTILS)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(ROOT)

OPTION(FORCE_32BIT "compile 32-bit application" OFF)

IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
ELSE()
        # if this project was included, export ROOT_HELPER_DIR variable
        SET(ROOT_HELPER_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
ENDIF()

ADD_SUBDIRECTORY(utils)
